# zx0decompress

./: LICENSE  README.md
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decompress.rs
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/src/: error.rs  lib.rs
lib/tests/: test_files.rs
lib/tests/fixtures/: Makefile  README.md  hello.txt.zx0  obj1.zx0  paper4.zx0  paper5.zx0  paper6.zx0  progc.zx0
